# wisp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  test_pipe.js
.superpowers/sdd/: final-cleanup-report.md  final-review-diff.txt  final-review.md  progress.md  review-15021dc..b06acbf.diff  review-17d0716..801fa65.diff  review-2524f3a..64ecb8f.diff  review-324b2a9..82b19bd.diff  review-52b6d9a..083f493.diff  review-6f5c44f..324b2a9.diff  review-82b19bd..2524f3a.diff  review-a211ca7..6f5c44f.diff  review-b06acbf..52b6d9a.diff  review-bcc90ba..cad9c82.diff  review-final-15021dc4f17c41038d62335fd12fc590c95ad281..801fa65.diff  review-final-p1-a211ca7..64ecb8f.diff  stage2-final-review-package.diff  stage2-progress.md  stage2-task-1-brief.md  stage2-task-1-report.md  stage2-task-1-review-package.diff  stage2-task-2-brief.md  stage2-task-2-report.md  stage2-task-2-review-package.diff  stage2-task-3-brief.md  stage2-task-3-fix-review-package.diff  stage2-task-3-report.md  stage2-task-3-review-package.diff  stage2-task-4-brief.md  stage2-task-4-report.md  stage2-task-4-review-package.diff  stage2-task-5-brief.md  stage2-task-5-report.md  stage2-task-5-review-package.diff  stage2-task-6-brief.md  stage2-task-6-report.md  stage2-task-6-review-package.diff  stage2-task-7-brief.md  stage2-task-7-report.md  stage2-task-7-review-package.diff  (+54 more)
benches/: bench.rs  timing_layer.rs
examples/: adv_check.rs  basic.rs  bs_final.rs  bs_read.rs  cf_banzhu_style.rs  cf_click_debug.rs  cf_cookie_fix.rs  cf_full_test.rs  cf_inspect.rs  cf_match_banzhu.rs  cf_pierce.rs  cf_poll.rs  cf_screenshot.rs  check_cdp.rs  check_handles.rs  check_headed.rs  check_native.rs  check_plugins.rs  check_signals.rs  check_tostring.rs  cloudflare_bypass.rs  debug_cdp.rs  debug_chrome.rs  debug_fetch.rs  debug_launch.rs  debug_pipe.rs  debug_pipe2.rs  debug_pipe3.rs  debug_pipe4.rs  debug_pipe5.rs  debug_rust6.rs  debug_winapi.rs  direct_nosb.rs  direct_pipe.rs  final_verify.rs  headed_final.rs  headed_test2.rs  headed_verify.rs  novel_crawler.rs  quick_v4.rs  (+16 more)
src/: config.rs  config_file.rs  error.rs  lib.rs  proxy.rs  text.rs
src/browser/: cdp.rs  element.rs  launch.rs  mod.rs  page.rs  patches.rs  pool.rs
src/cdp/: filter.rs  mod.rs  pipe.rs  session.rs
src/challenge/: mod.rs  turnstile.rs
src/crawl/: auto.rs  builder.rs  cache.rs  control.rs  engine.rs  items.rs  mod.rs  output.rs  request_cache.rs  robots.rs  runner.rs  scheduler.rs  (+4 more)
tests/: adaptive_test.rs  auto_mode_test.rs  browser_status_code_test.rs  builder_api_test.rs  callback_routing_test.rs  cf_bypass_real_test.rs  cr_fix_autoscale_test.rs  cr_fix_backend_test.rs  cr_fix_engine_test.rs  cr_fix_pool_test.rs  cr_fix_robots_port_test.rs  cr_fix_t10_test.rs  cr_fix_t11_test.rs  cr_fix_t1_test.rs  cr_fix_t4_test.rs  cr_fix_t7_test.rs  crawl_cache_real_test.rs  crawl_checkpoint_test.rs  crawl_concurrency_test.rs  crawl_e2e_real_test.rs  crawl_retry_real_test.rs  crawl_robots_real_test.rs  difflib_test.rs  dom_navigation_test.rs  engine_infra_test.rs  fetch_test.rs  integration.rs  mcp_test.rs  multi_spider_test.rs  p0_autoscale_test.rs  p0_dashmap_test.rs  p1_meta_persistence_test.rs  p1_proxy_clients_test.rs  p1_scheduler_test.rs  p1_status_codes_test.rs  real_scrape_test.rs  session_test.rs  sitemap_test.rs  stealth.rs  stop_condition_test.rs  (+4 more)
(+89 files in other folders)
