[package]
name = "wisp"
version = "0.1.0"
edition = "2021"
description = "Lightweight undetected browser automation for Rust - built for scraping"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
which = "7"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tungstenite = "0.26"
anyhow = "1"
rand = "0.9"
# Scraping / parsing
scraper = "0.23"
select = "0.6"
encoding_rs = "0.8"
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "wisp"
path = "src/bin/wisp.rs"
