[package]
name = "wisp"
version = "0.1.0"
edition = "2021"
description = "Lightweight undetected browser automation for Rust - built for scraping"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
which = "7"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tungstenite = "0.26"
anyhow = "1"
rand = "0.9"
# Scraping / parsing
scraper = "0.23"
ego-tree = "0.10"
encoding_rs = "0.8"
url = "2"
async-trait = "0.1"
wreq = "6.0.0-rc"
wreq-util = "3.0.0-rc"
regex = "1"
# SQLite 统一存储（阶段 1：adaptive + checkpoint）
rusqlite = { version = "0.32", features = ["bundled"] }
# checkpoint blob 序列化
bincode = "1"
# 流式输出（阶段 1 内部用，阶段 3 对外暴露）
tokio-stream = "0.1"
# 时间戳（CrawlState 用）
chrono = { version = "0.4", features = ["serde"] }
# XPath 1.0 完整查询（阶段 2：sxd-xpath 懒解析）
sxd-document = "0.3"
sxd-xpath = "0.4"
# 内存级请求缓存
moka = { version = "0.12", features = ["future"] }
# HTML -> Markdown 转换
htmd = "0.2"
# Cron 表达式解析
croner = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "wisp"
path = "src/bin/wisp.rs"
